// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-iYsgxs eFwuDC"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-bIStaS ghVKmr"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-hGxJNH hXjzTc"
    >
      <div
        className="sc-dHnBmY fSBBSP"
      />
    </span>
    <span
      className="sc-dGBNLl hGWeem"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-iYsgxs eFwuDC"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-bIStaS ghVKmr"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-hGxJNH hXjzTc"
    >
      <div
        className="sc-dHnBmY fSBBSP"
      />
    </span>
    <span
      className="sc-dGBNLl hGWeem"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-iYsgxs eFwuDC"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-bIStaS ghVKmr"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-hGxJNH hXjzTc"
    >
      <div
        className="sc-dHnBmY fSBBSP"
      />
    </span>
    <span
      className="sc-dGBNLl hGWeem"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-iYsgxs eFwuDC"
>
  <input
    checked={true}
    className="sc-bIStaS ghVKmr"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-hGxJNH hXjzTc"
  >
    <div
      className="sc-dHnBmY fSBBSP"
    />
  </span>
  <span
    className="sc-dGBNLl hGWeem"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-iYsgxs eFwuDC"
>
  <input
    className="sc-bIStaS ghVKmr"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-hGxJNH hXjzTc"
  >
    <div
      className="sc-dHnBmY fSBBSP"
    />
  </span>
  <span
    className="sc-dGBNLl hGWeem"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-iYsgxs eFwuDC"
      htmlFor="button1"
    >
      <input
        className="sc-bIStaS ghVKmr"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-hGxJNH hXjzTc"
      >
        <div
          className="sc-dHnBmY fSBBSP"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-iYsgxs eFwuDC"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-bIStaS ghVKmr"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-hGxJNH hXjzTc"
      >
        <div
          className="sc-dHnBmY fSBBSP"
        />
      </span>
      <span
        className="sc-dGBNLl hGWeem"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-iYsgxs eFwuDC"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-bIStaS ghVKmr"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-hGxJNH hXjzTc"
      >
        <div
          className="sc-dHnBmY fSBBSP"
        />
      </span>
      <span
        className="sc-dGBNLl hGWeem"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-iYsgxs eFwuDC"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-bIStaS ghVKmr"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-hGxJNH hXjzTc"
      >
        <div
          className="sc-dHnBmY fSBBSP"
        />
      </span>
      <span
        className="sc-dGBNLl hGWeem"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
